workshops/01-how-to-live-in-harmony-with-ARM-templates/completed-labs/lab-07/01-nsg/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "variables": {
        "environment": "dev",
        "agwNsgName": "[concat('iac-', variables('environment'), '-agw-nsg')]",
        "aksNsgName": "[concat('iac-', variables('environment'), '-aks-nsg')]",
        "location": "westeurope",
        "agwSubnetAddressPrefix": "10.112.16.128/25",
        "aksSubnetAddressPrefix": "10.112.0.0/20"
    },
    "resources": [
        {
            "name": "[variables('agwNsgName')]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2019-11-01",
            "location": "[variables('location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "INT-T443-IN-ALLOW",
                        "properties": {
                            "description": "",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "[variables('agwSubnetAddressPrefix')]",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "INT-T80-IN-ALLOW",
                        "properties": {
                            "description": "",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "[variables('agwSubnetAddressPrefix')]",
                            "access": "Allow",
                            "priority": 101,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "AKS-T443-OUT-ALLOW",
                        "properties": {
                            "description": "",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "[variables('aksSubnetAddressPrefix')]",
                            "destinationAddressPrefix": "[variables('agwSubnetAddressPrefix')]",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Outbound"
                        }
                    }
                ]
            }
        },
        {
            "name": "[variables('aksNsgName')]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2019-11-01",
            "location": "[variables('location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "AGW-T443-IN-ALLOW",
                        "properties": {
                            "description": "",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "[variables('agwSubnetAddressPrefix')]",
                            "destinationAddressPrefix": "[variables('aksSubnetAddressPrefix')]",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        }
    ]
}
